Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/035_procedure_too_many_args_expect1.xi
f(x:int)

g()
{
    f(1, 2)
}
//@PRACOWNIA
//@should_not_typecheck
